--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,6 @@
   <body>
     <canvas id="myCanvas" width="480" height="320"></canvas>
 
-    <script src="./dist/index.js"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
